# IFJ-2018

./: .editorconfig  .gitignore  CMakeLists.txt  LL Table Real  LexicalAnalyzer.h  Makefile  README.md  a.txt  errors.c  errors.h  example1.lexout  example3.lexout  generator.c  generator.h  lexicalanalyzer.c  lexicalanalyzer.h  main.c  parser.c  prec_anal.c  prec_anal.h  prec_dl.c  prec_dl.h  rozdeleni  string.c  string.h  sym_dl.c  sym_dl.h  symtable.c  symtable.h  test  tester.c  undef-var.lexout
doc/: LL Table  LL Table Real  dokumentace.docx  exp_rules  expressions.docx
lexout/: example1.lexout  example2.lexout  example3.lexout  undef-var.lexout
src/: example2.src  undef-var.src
tests/: colorful_script.sh  colorful_script_no_input.sh  ifj18.rb  script.sh  script_no_input.sh  test_from_school.sh  test_just_example.sh
tests/our_tests/: 01.src  02.src  03.src  04.src  05.src  06.src  07.src  08.src  09.src  10.src  11.src  12.src  13.src  14.src  17.src  18.src  19.src  20.src  21.src  22.src  23.src  24.src  25.src  26.src  27.src  28.src  31_IFs.src  32_IFs.src  33_IFs.src  34_IFs.src  35_IFs.src  example.src  example1.zatimnetestujeme  example2.src  example3.src
tests/tests_from_school/: example1.out  example1.src  example2.out  example3.in  example3.out  example3.src  undef-var.out  undef-var.src
